--- a/app/views/users/_read.html.slim
+++ b/app/views/users/_read.html.slim
@@ -14,11 +14,12 @@
               = link_to book_read.book.publisher_name, books_path(author: book_read.book.publisher_name)
             p.mb-0.small
               = "発売日：#{book_read.book.sales_date}"
-            small
-              = simple_format(book_read.comment.truncate(30))
-              - if book_read.comment.size > 30
-                small
-                  = link_to "続きを読む", book_book_read_path(book_read.book_id,book_read, user: book_read.user_id)
+            p
+              strong
+                = simple_format(book_read.comment.truncate(30))
+                - if book_read.comment.size > 30
+                  small
+                    = link_to "続きを読む", book_book_read_path(book_read.book_id,book_read, user: book_read.user_id)
 
             .d-inline-flex.btn-group.btn-group-md.mb-2
               .badge.badge-light.text-dark.shadow-sm.align-items-end.p-2
