--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,6 @@
 }
 
 html{
-  // font-family: 'Noto Sans JP', sans-serif, "Kosugi";
   font-family: "Hiragino Kaku Gothic ProN","Hiragino Sans",'Noto Sans JP', sans-serif, "Kosugi";
 }
 
@@ -134,7 +133,6 @@ header{
   }
 }
 
-
 // book-showページ
 .book_show_onbtn{
   width:120px;
@@ -225,8 +223,7 @@ header{
 
   .user_show_btn,
   .book_show_btn{
-    width:100%;
-    height:70px;
+    width:120px;
     opacity: 50%;
     &:hover {
       width:100%;
@@ -236,9 +233,9 @@ header{
   }
 
   .read_btn_active{
-  width:100%;
-  opacity: 100%;
-  background-color:#FFE100;
+    width:100%;
+    opacity: 100%;
+    background-color:#FFE100;
   }
 
   .user_show_cardbody{
@@ -274,5 +271,4 @@ header{
   .notification_book_jacket{
     display: none;
   }
-
 }
