[fix] slick画像表示修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,10 @@ header{
   height:110%;
   width:110%;
 }
+.about_slide_box > img{
+  height: 100%;
+  min-height: 100%;
+}
 
 .about_find_book{
   color: black;
