[fix] jsエラー,localja,バリデーションメッセージ

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
     = csp_meta_tag
     = favicon_link_tag(image_url("favicon.ico"))
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    script "https://kit.fontawesome.com/7b10f1e4cc.js" crossorigin="anonymous"
+    script src="https://kit.fontawesome.com/7b10f1e4cc.js" crossorigin="anonymous"
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     link rel="preconnect" href="https://fonts.googleapis.com"
