--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,5 +19,6 @@ html
     header.sticky-top
       = render "layouts/header"
     main
-      = render "layouts/flash"
+      .flash
+        = render "layouts/flash"
       = yield
