--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -42,7 +42,7 @@
 
           .badge.badge-pill.badge-light.pt-2
             h6
-              = link_to book_book_read_path(review.book_id, review, user: review.user), class:"text-secondary" do
+              = link_to book_book_read_path(review.book_id, review, user: review.user), class:"comment_btn text-secondary" do
                 i.fa.fa-comments コメント#{review.read_comments.count}
 
     javascript:
