--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -22,7 +22,7 @@
                 = render "relationships/follow_btn", user: @user
 
             - else
-              = link_to edit_user_path(current_user.id), local: true, class:"btn btn-outline-secondary px-2 mr-2" do
+              = link_to edit_user_path(current_user.id), local: true, class:"user_edit_btn btn btn-outline-secondary px-2 mr-2" do
                 i.fas.fa-cog.mx-1
                 span プロフィール編集
         hr.mb-0.mt-5
